--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "classnames": "^2.3.1",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-text-loop": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
