--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-text-loop": "^2.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.13",
     "tailwindcss": "^2.1.2"
